tests/ui/failing/dynamic-drop.rs.stderr
    Blocking waiting for file lock on package cache
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.03s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs`
error[E0557]: feature has been removed
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:4:12
  |
4 | #![feature(generators, generator_trait)]
  |            ^^^^^^^^^^ feature has been removed
  |
  = note: renamed to `coroutines`

error[E0432]: unresolved import `std::ops::Generator`
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:11:5
   |
11 | use std::ops::Generator;
   |     ^^^^^^^^^^^^^^^^^^^ no `Generator` in `ops`

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:180:10
    |
180 |          yield a.alloc(),
    |          ^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:182:10
    |
182 |          yield a.alloc()
    |          ^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

warning: lint `unused_tuple_struct_fields` has been renamed to `dead_code`
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:105:37
    |
105 | struct TwoPtrs<'a>(Ptr<'a>, #[allow(unused_tuple_struct_fields)] Ptr<'a>);
    |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use the new name: `dead_code`
    |
    = note: `#[warn(renamed_and_removed_lints)]` on by default

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:180:10
    |
180 |          yield a.alloc(),
    |          ^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error: `yield` can only be used in `#[coroutine]` closures, or `gen` blocks
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:180:10
    |
180 |          yield a.alloc(),
    |          ^^^^^^^^^^^^^^^
    |
help: use `#[coroutine]` to make this closure a coroutine
    |
178 |     let mut gen = #[coroutine] || {
    |                   ++++++++++++

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:182:10
    |
182 |          yield a.alloc()
    |          ^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0635]: unknown feature `generator_trait`
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:4:24
  |
4 | #![feature(generators, generator_trait)]
  |                        ^^^^^^^^^^^^^^^

error[E0599]: no method named `resume` found for struct `Pin<&mut ...>` in the current scope
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:186:28
    |
186 |         Pin::new(&mut gen).resume(());
    |                            ^^^^^^ method not found in `Pin<&mut ...>`
    |
   ::: /home/zncv/.rustup/toolchains/nightly-2024-11-29-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ops/coroutine.rs:119:8
    |
119 |     fn resume(self: Pin<&mut Self>, arg: R) -> CoroutineState<Self::Yield, Self::Return>;
    |        ------ the method is available for `std::pin::Pin<&mut {coroutine@/home/zncv/Applications/mir-semantics-compiletest/ui/drop/dynamic-drop.rs:178:19: 178:21}>` here
    |
    = note: the full type name has been written to 'dynamic-drop.long-type-13489464592143877971.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = help: items from traits can only be used if the trait is in scope
help: trait `Coroutine` which provides `resume` is implemented but not in scope; perhaps you want to import it
    |
9   + use std::ops::Coroutine;
    |

error: aborting due to 9 previous errors; 1 warning emitted

Some errors have detailed explanations: E0432, E0557, E0599, E0635, E0658.
For more information about an error, try `rustc --explain E0432`.
